<resources>
    <string name="app_name">Music</string>
    <string name="title">Проект жанры музыки</string>
    <string name="topic1">Треш метал</string>
    <string name="topic1_descr">Трэш-метал — музыкальное направление в метале, давшее начало большинству экстремальных его разновидностей. Характеризуется достаточно высокой скоростью исполнения, большей жёсткостью пробивных, быстрых, исполненных в низком диапазоне частот ритмических фигур (риффов) по сравнению с классическим хэви-металом и агрессией вкупе с техничным, кромсающим, молотящим, скоростным стилем гитарных соло в высоком диапазоне частот и басово-гитарным тремоло.</string>
    <string name="metallica_descr">Metallica — американская метал-группа, созданная вокалистом и гитаристом Джеймсом Хэтфилдом и барабанщиком Ларсом Ульрихом в Лос-Анджелесе. Одна из наиболее популярных и влиятельных команд в истории хард-рока, Metallica входит в так называемую «большую четвёрку» основоположников и ключевых коллективов жанра трэш-метал, оказавших определяющее влияние на его развитие, и считается, что творчество этих коллективов положило начало развитию данного направления в музыке.</string>
    <string name="megadeth_descr">Megadeth — американская метал-группа из города Лос-Анджелес. Коллектив основан гитаристом и вокалистом Дэйвом Мастейном и бас-гитаристом Дэвидом Эллефсоном после того, как Мастейн был уволен из группы Metallica. В 2002 году Megadeth распалась после того, как Мастейн тяжело повредил лучевой нерв, но уже в 2004 году, после прохождения физиотерапии, он восстановил группу. В том же году Megadeth выпустили альбом The System Has Failed, который стартовал на 18-м месте в хит-параде популярных альбомов журнала Billboard.</string>
    <string name="slayer_descr">Slayer — американская метал-группа, созданная гитаристами Джеффом Ханнеманом и Керри Кингом в Хантингтон-Парке. Наряду с Ханнеманом и Кингом первую инкарнацию коллектива, ставшую классической, составили басист и вокалист Том Арайя и ударник Дэйв Ломбардо. Группа возглавила музыкальное движение американского трэш-метала в 1986 году после выпуска своего альбома Reign in Blood, который считается лучшим достижением группы и «классикой трэш-метала». Вместе с группами Metallica, Megadeth и Anthrax, Slayer входит в «большую четвёрку трэш-метала».</string>
    <string name="topic2">Синтвейв</string>
    <string name="topic2_descr">Синтвейв, также известный под названиями Ретровейв — стиль электронной музыки, появившийся в середине 2000-х годов. Жанр основан на использовании синтезаторов, подражании музыке 1980-х с добавлением новых технологий и попытке воспроизвести атмосферу фильмов и видеоигр той эпохи. Синтвейв достиг расцвета и популярности в 2010-е, на волне ностальгии, повышенного интереса к киберпанку и 1980-ым.</string>
    <string name="kavinsky_descr">Венсан Пьер Клод Белорже — диджей, представитель французской хаус-музыки, более известен под именем Kavinsky. Вдохновением для творчества Венсана служат фильмы о зомби эпохи VHS, хип-хоп и фанк последних десятилетий XX века. Исполняет треки в стиле электронных саундтреков к фильмам 1980-х годов. Музыкальные композиции и видеоклипы Белорже повествуют о вымышленном персонаже Kavinsky — молодом человеке, который погиб в 1986 году, не справившись с управлением своего красного Ferrari Testarossa, и восстал из мёртвых 20 лет спустя, для того чтобы творить собственную электронную музыку. Сильно прославился после написания трека Nigthcall, который звучал в фильме Драйв, с Раяном Гослингом.</string>
    <string name="ludowic_descr">Диджей, Испольнитель в жанре синтвейв. Прославился после написания части саундтрека к игре Katana Zero.</string>
    <string name="moon_descr">Диджей, Испольнитель в жанре синтвейв. Прославился после написания части саундтрека к игре Hotline Miami 2: Whong number.</string>
    <string name="topic3">Электро свинг</string>
    <string name="topic3_descr">Электро-свинг — музыкальный жанр, использующий традиционные звучания свинга, быстрого джаза, буги, а также других стилей 1940-х и 1950-х годов в рамках методов и приёмов производства современной танцевальной электроники.</string>
    <string name="caravan_descr">Caravan Palace — французская музыкальная группа, играющая в жанре электро-свинг. В настоящее время в состав группы входят: Зои Колоти (вокал, кларнет), Арно Виаль (гитара, вокал), Шарль Делапорт (бас-гитара, вокал), Пол-Мари Барбье (пианино, ударные, вибрафон), Мартен Берлюг (тромбон), Лука Сен-Крик (саксофон, кларнет).Группа была основана в 2005 году после того, как три участника группы были наняты кинокомпанией для создания саундтрека к немым порнографическим фильмам. В октябре 2008 года компанией Wagram Music был выпущен дебютный альбом группы — Caravan Palace. Запись появилась в чартах Швейцарии, Бельгии и Франции и достигла 11 места.</string>
    <string name="balduin_descr">Музыкальный дует, в жанре Электро свинг. Группа состоит из Мартина Старака и Бенедикта Куна.</string>
    <string name="tape_descr">Tape Five — немецкий музыкальный проект, основанный в 2003 году автором песен и продюсером Мартином Штратхаузеном. Tape Five создаёт музыку в различных стилях, таких как электро-свинг, нью-джаз, латина, лаунж и электро. Tape Five повлияли на движение электро-свинга своими альбомами Tonight Josephine (2010) и Swing Patrol (2012).</string>
    <string name="goback">Назад</string>
    <string name="to_web">Веб браузер</string>
    <string name="search">Поиск</string>
</resources>