<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Synthwave">

    <TextView
        android:id="@+id/genreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/topic2"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="321dp"
        android:text="@string/goback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genreDescription"
        android:layout_width="368dp"
        android:layout_height="183dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="29dp"
        android:text="@string/topic2_descr"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreTitle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="417dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="313dp">

        <ImageButton
            android:id="@+id/leftArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/left_arrow" />

        <LinearLayout
            android:layout_width="670dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bandPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/kavinsky" />

            <TextView
                android:id="@+id/bandDescription"
                android:layout_width="match_parent"
                android:layout_height="367dp"
                android:layout_weight="1"
                android:text="@string/kavinsky_descr" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/rightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/right_arrow" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>