<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrashMetal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="321dp"
            android:text="@string/goback" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/genreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/topic1"
                android:textSize="32dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/genreDescription"
            android:layout_width="374dp"
            android:layout_height="168dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="29dp"
            android:text="@string/topic1_descr" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="410dp"
            android:layout_height="442dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/leftArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/left_arrow" />

            <LinearLayout
                android:layout_width="670dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bandPoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/metallica" />

                <TextView
                    android:id="@+id/bandDescription"
                    android:layout_width="match_parent"
                    android:layout_height="367dp"
                    android:layout_weight="1"
                    android:text="@string/metallica_descr" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/rightArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/right_arrow" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>